--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,5 +4,13 @@
   ],
   "extends": [
     "plugin:office-addins/recommended"
-  ]
+  ],
+  "env": {
+    "browser": true,
+    "es6": true
+  },
+  "globals": {
+    "Office": "readonly",
+    "$": "readonly"
+  }
 }
