--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "start:desktop": "office-addin-debugging start manifest.xml desktop",
     "start:web": "office-addin-debugging start manifest.xml web",
     "stop": "office-addin-debugging stop manifest.xml",
-    "test": "run-tiny-esm-test-runner test/unit/test-*.js",
+    "test": "run-tiny-esm-test-runner tests/unit/test-*.mjs",
     "validate": "office-addin-manifest validate manifest.xml",
     "watch": "webpack --mode development --watch"
   },
