--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "run-tiny-esm-test-runner tests/unit/test-*.mjs",
     "validate": "office-addin-manifest validate manifest.xml",
     "watch": "webpack --mode development --watch",
-    "watch:run-test-server": "webpack --mode production --watch --output-path tests/run-test-server/web"
+    "watch:run-test-server": "webpack --mode production --watch --output-path tests/run-test-server/web --watch-options-poll=10000"
   },
   "dependencies": {
     "@microsoft/office-js": "^1.1.90",
