Add an array-bracket-newline rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "$": "readonly"
   },
   "rules": {
+    "array-bracket-newline": ["error", { "multiline": true }],
     "no-const-assign": "error",
     "prefer-const": ["warn", {
       "destructuring": "any",
