--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "dev-server": "webpack serve --mode development",
-    "lint": "office-addin-lint check",
-    "lint:fix": "office-addin-lint fix",
-    "prettier": "office-addin-lint prettier",
+    "lint": "office-addin-lint check --files src/**/*.{js,mjs}",
+    "lint:fix": "office-addin-lint fix --files src/**/*.{js,mjs}",
+    "prettier": "office-addin-lint prettier --files src/**/*.{js,mjs}",
     "start": "office-addin-debugging start manifest.xml",
     "start:desktop": "office-addin-debugging start manifest.xml desktop",
     "start:web": "office-addin-debugging start manifest.xml web",
