--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "office-addin-dev-certs": "^1.11.3",
     "office-addin-lint": "^2.2.5",
     "office-addin-manifest": "^1.12.3",
+    "office-addin-mock": "^3.0.3",
     "office-addin-prettier-config": "^1.2.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
