--- a/package.json
+++ b/package.json
@@ -39,8 +39,13 @@
   "devDependencies": {
     "@babel/core": "^7.27.4",
     "@babel/preset-env": "^7.27.2",
+    "@eslint/compat": "^1.2.9",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.28.0",
     "@types/office-js": "^1.0.508",
     "@types/office-runtime": "^1.0.35",
+    "@typescript-eslint/eslint-plugin": "^8.33.1",
+    "@typescript-eslint/parser": "^8.33.1",
     "acorn": "^8.14.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^10.0.0",
@@ -51,6 +56,7 @@
     "eslint-plugin-office-addins": "^4.0.3",
     "eslint-plugin-prettier": "^5.4.1",
     "file-loader": "^6.2.0",
+    "globals": "^16.2.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "office-addin-cli": "^2.0.3",
