--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "office-addin-lint check --files src/**/*.{js,mjs}",
     "lint:fix": "office-addin-lint fix --files src/**/*.{js,mjs}",
     "prettier": "office-addin-lint prettier --files src/**/*.{js,mjs}",
-    "start": "office-addin-debugging start FlexConfirmMail.manifest.xml --document dist",
+    "start": "office-addin-debugging start FlexConfirmMail.manifest.xml",
     "start:desktop": "office-addin-debugging start FlexConfirmMail.manifest.xml desktop",
     "start:web": "office-addin-debugging start FlexConfirmMail.manifest.xml web",
     "stop": "office-addin-debugging stop FlexConfirmMail.manifest.xml",
