--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bootstrap": "^5.3.6",
     "core-js": "^3.42.0",
     "dompurify": "^3.2.6",
+    "ini": "^5.0.0",
     "jsdom": "^26.1.0",
     "regenerator-runtime": "^0.14.1"
   },
