--- a/package.json
+++ b/package.json
@@ -31,47 +31,48 @@
   "dependencies": {
     "@fluentui/web-components": "^2.6.1",
     "@microsoft/office-js": "^1.1.110",
-    "bootstrap": "^5.3.6",
-    "core-js": "^3.42.0",
-    "dompurify": "^3.2.6",
-    "jsdom": "^26.1.0",
+    "bootstrap": "^5.3.8",
+    "core-js": "^3.47.0",
+    "dompurify": "^3.3.0",
+    "jsdom": "^27.2.0",
     "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.27.4",
-    "@babel/preset-env": "^7.27.2",
-    "@eslint/compat": "^1.2.9",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.28.0",
-    "@types/office-js": "^1.0.508",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@eslint/compat": "^2.0.0",
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.1",
+    "@types/office-js": "^1.0.560",
     "@types/office-runtime": "^1.0.35",
-    "@typescript-eslint/eslint-plugin": "^8.33.1",
-    "@typescript-eslint/parser": "^8.33.1",
-    "acorn": "^8.14.1",
+    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@typescript-eslint/parser": "^8.48.0",
+    "acorn": "^8.15.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^10.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "copy-webpack-plugin": "^13.0.0",
+    "copy-webpack-plugin": "^13.0.1",
     "eslint-import-resolver-babel-module": "^5.3.2",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-office-addins": "^4.0.3",
-    "eslint-plugin-prettier": "^5.4.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-office-addins": "^4.0.6",
+    "eslint-plugin-prettier": "^5.5.4",
     "file-loader": "^6.2.0",
-    "globals": "^16.2.0",
+    "globals": "^16.5.0",
     "html-loader": "^5.1.0",
-    "html-webpack-plugin": "^5.6.3",
-    "office-addin-cli": "^2.0.3",
-    "office-addin-debugging": "^6.0.3",
-    "office-addin-dev-certs": "^2.0.3",
-    "office-addin-lint": "^3.0.3",
-    "office-addin-manifest": "^2.0.3",
-    "office-addin-mock": "^3.0.3",
+    "html-webpack-plugin": "^5.6.5",
+    "npm-check-updates": "^19.1.2",
+    "office-addin-cli": "^2.0.6",
+    "office-addin-debugging": "^6.0.6",
+    "office-addin-dev-certs": "^2.0.6",
+    "office-addin-lint": "^3.0.6",
+    "office-addin-manifest": "^2.1.2",
+    "office-addin-mock": "^3.0.6",
     "office-addin-prettier-config": "^2.0.1",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "source-map-loader": "^5.0.0",
     "tiny-esm-test-runner": "^1.2.3",
-    "webpack": "^5.99.9",
+    "webpack": "^5.103.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "5.2.2"
   },
