--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
+    "@babel/eslint-parser": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "@eslint/compat": "^2.0.0",
     "@eslint/eslintrc": "^3.3.3",
@@ -47,7 +48,6 @@
     "@typescript-eslint/eslint-plugin": "^8.48.0",
     "@typescript-eslint/parser": "^8.48.0",
     "acorn": "^8.15.0",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^10.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "copy-webpack-plugin": "^13.0.1",
